# AMR_object_detection

./: LICENSE  README.md
object_detection_from_amr/src/: README.md
object_detection_from_amr/src/object_detection/: CMakeLists.txt  package.xml
object_detection_from_amr/src/object_detection/include/: kalman.h  object_detection.h  ros2_wrapper.h  tracked_object.h
object_detection_from_amr/src/object_detection/launch/: remote_inference.launch.py  standalone_launch_MYRIAD.launch.py
object_detection_from_amr/src/object_detection/models/ssd_mobilenet_v2_coco/: frozen_inference_graph - 副本.labels  frozen_inference_graph.mapping.xml  frozen_inference_graph.xml
object_detection_from_amr/src/object_detection/msg/: Object.msg
object_detection_from_amr/src/object_detection/rviz/: default.rviz
object_detection_from_amr/src/object_detection/src/: main.cpp  object_detection.cpp  ros2_wrapper.cpp
