<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>object_detection</name>
  <version>0.0.0</version>
  <description>The object_detection package</description>
  <maintainer email="nanda.kishore.moduga@intel.com">nmoduga</maintainer>
  <license>Apache 2</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>


  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>InferenceEngine</build_depend>
  <build_depend>ngraph</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>InferenceEngine</build_export_depend>
  <build_export_depend>ngraph</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>object_msgs</build_export_depend>
  <build_export_depend>image_geometry</build_export_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>InferenceEngine</exec_depend>
  <exec_depend>ngraph</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
